# jobSearchAgent-3

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/skills/archive-duplicates/: SKILL.md
.agents/skills/archive-duplicates/agents/: openai.yaml
.agents/skills/fetch-jobs/: SKILL.md
.agents/skills/fetch-jobs/agents/: openai.yaml
.agents/skills/match-jobs/: SKILL.md
.agents/skills/match-jobs/agents/: openai.yaml
.agents/skills/notify-email/: SKILL.md
.agents/skills/notify-email/agents/: openai.yaml
.agents/skills/run-job-search/: SKILL.md
.agents/skills/run-job-search/agents/: openai.yaml
.agents/skills/sort-by-location/: SKILL.md
.agents/skills/sort-by-location/agents/: openai.yaml
.agents/skills/trello-sync-csv/: SKILL.md
.agents/skills/trello-sync-csv/agents/: openai.yaml
.agents/skills/trello-update-board/: SKILL.md
.agents/skills/trello-update-board/agents/: openai.yaml
.claude/: settings.json
.claude/skills/: 01-fetch-jobs.md  02-archive-duplicates.md  03-match-jobs.md  04-sort-by-location.md  trello-sync-csv.md  trello-update-board.md
.claude/skills/fetch-jobs/: SKILL.md
.claude/skills/match-jobs/: SKILL.md
.claude/skills/notify-email/: SKILL.md
.claude/skills/run-job-search/: SKILL.md
.claude/skills/sort-by-location/: SKILL.md
.codex/: config.toml
context/: matchCriteria.md  resume.example.md  searchTerms.md  trello_cards.example.csv
src/job_search_agent/: __init__.py  cli.py  listings.py  workflow.py
tests/: test_workflow.py
