[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-search-agent"
version = "0.1.0"
description = "Deterministic utilities for the Codex job-search workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0,<2",
  "PyYAML>=6,<7",
]

[project.scripts]
job-search-agent = "job_search_agent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/job_search_agent"]
